# crashmo

./: .gitignore
server/server/: CMakeLists.txt  project-crash.sln  project-udp-client-test.sln  project-udp-server.sln  project-udp-test.sln  tags  新建文本文档.txt
server/server/client/: clien_player.cpp  clien_player.h  client.cpp  client.h  client.vcxproj  client_manager.cpp  client_manager.h  main.cpp  playermanager.cpp  playermanager.h  random.h  stdafx.h
server/server/cmake_modules/: CompilerVersion.cmake  FindCurl.cmake  FindLibDL.cmake  FindLibLdap.cmake  FindLog4CXX.cmake  FindMySQL.cmake  FindMySQLPP.cmake  FindPCRE.cmake  PCHSupport.cmake
server/server/common/: common.vcxproj
server/server/gm_tool/: ReadMe.txt  client.cpp  client.h  dlg_advice.cpp  dlg_advice.h  dlg_girls.cpp  dlg_girls.h  dlg_info_check.h  dlg_login.cpp  dlg_login.h  dlg_modify_password.cpp  dlg_modify_password.h  dlg_reservation.cpp  dlg_reservation.h  dlg_shop.cpp  dlg_shop.h  girls_manager.cpp  girls_manager.h  gm_tool.cpp  gm_tool.h  gm_tool.rc  gm_tool.sln  gm_tool.vcxproj  gm_toolDlg.cpp  gm_toolDlg.h  resource.h  stdafx.cpp  stdafx.h
server/server/gm_tool/res/: gm_tool.rc2
server/server/message/: c++Protobuf.bat  c++Protobuf.sh  common.proto  crashmo.proto  gen.bat  gs2client.proto  libprotoc.la  login.proto  lt-protoc  msg_game_db.proto  msg_gate_login.proto  msgs2c.proto  protoc
server/server/message/ProtoGen/: gen.bat
server/server/message/c#message/: crashmo_msg.cs
server/server/message/msg/: common.pb.h  crashmo.pb.h  login.pb.cc  login.pb.h  msg.rar  msg_game_db.pb.cc  msg_gate_login.pb.cc  msgs2s.pb.cc
server/server/project-udp-client/: client.cpp  project-udp-client.vcxproj  test_udp_client.cpp  test_udp_client.h
server/server/server/: CMakeLists.txt
server/server/server/common/: MyLog.cpp  MyLog.h  asiodef.h  base64_encode.cpp  base_server.cpp  base_server.h  basesession.cpp  basesession.h  call_back.h  client_base.cpp  client_base.h  client_enet_component.cpp  client_enet_component.h  common.vcxproj  common_template.h  crypt.cpp  cur_http_client.cpp  cur_http_client.h  database.cpp  database.h  enet_component.cpp  enet_component.h  event_call_back.h  event_manager.h  http_client.cpp  http_client.h  http_server.cpp  http_server.h  mapstorage.cpp  memory.h  message_interface.cpp  message_interface.h  msg_component.cpp  msg_component.h  net_type.h  (+27 more)
server/server/shardlib/: ReadMe.txt  shardlib.vcxproj
server/server/test_tcp_client/: my_tcp_client.cpp  my_tcp_client.h  test_tcp_client.cpp  test_tcp_client.vcxproj
server/server/test_tcp_server/: my_tcp_server.cpp  my_tcp_server.h  my_tcp_session.cpp  my_tcp_session.h  test_tcp_server.cpp  test_tcp_server.vcxproj
server/server/udp_server/: test_udp_server.cpp  test_udp_server.h  test_udp_server.vcxproj  test_udp_session.cpp  test_udp_session.h  udp_server.cpp
(+495 files in other folders)
